--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,8 @@
 # a) Ignore the Rough/Practice area in Web-D
 3-Web-D/7 Rough or Practice area/
 
-# b) Ignore the Extra folder in the root
+# b) Ignore the Rough/Practice area in Web-D
+3-Web-D/6 Projects
+
+# c) Ignore the Extra folder in the root
 Extra/
