--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 3-Web-D/7 Rough or Practice area/
 
 # b) Ignore the Rough/Practice area in Web-D
-3-Web-D/6 Projects
+3-Web-D/6 Projects/
 
 # c) Ignore the Extra folder in the root
 Extra/
