Stop tracking 6 Projects folder

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 
 # b) Ignore the Rough/Practice area in Web-D
 3-Web-D/6 Projects/
+"3-Web-D/6 Projects/"
 
 # c) Ignore the Extra folder in the root
 Extra/
